fixed contrast

--- a/styles/main.css
+++ b/styles/main.css
@@ -39,7 +39,7 @@ header{
 }
 h1 {
     font-size: 50px;
-    color: white;
+    color: #ebdddd;
     text-shadow: 5px 5px 10px black;
 }
 h2 {
@@ -61,7 +61,7 @@ footer {
     box-shadow: 0 4px 8px 0 black, 0 6px 20px 0 black;
     background-color: #87A96B;
     font-size: 20px;
-    color: white;
+    color: #ebdddd;
 }
 
 #update {
